# burnsolana

./: Anchor.toml  LICENSE  README.md  SECURITY.md
burn-contract/: Cargo.toml
burn-contract/src/: context.rs  lib.rs
idl/: burnsolana.json  burnsolana.ts
programs/burnsolana/: Cargo.toml
programs/burnsolana/programs/burnsolana/src/: context.rs  instructions.rs  lib.rs  states.rs
programs/burnsolana/src/: errors.rs
